_old/dinoco_docs/src/content/v0.0.3/ko-kr/orm/relations.md
# 관계

관계는 Dinoco 스키마에서 모델들을 서로 연결합니다.

이 페이지에서는 `@relation(...)`, `onDelete`, `onUpdate` 및 가장 일반적인 관계 패턴을 다룹니다.

---

## @relation(...)

`@relation(...)` 속성은 두 모델이 어떻게 연결되는지 정의합니다.

지원되는 매개변수:

| 매개변수    | 용도                                              |
| :----------- | :----------------------------------------------- |
| `name`       | 관계의 명시적 이름                        |
| `fields`     | 키로 사용되는 로컬 필드                  |
| `references` | 대상 모델에서 참조되는 필드               |
| `onDelete`   | 참조된 레코드 삭제 시 동작 |
| `onUpdate`   | 참조된 값 업데이트 시 동작  |

전체 예시:

```dinoco
model Post {
	id       Integer @id @default(autoincrement())
	title    String
	authorId Integer?
	author   User?   @relation(fields: [authorId], references: [id], onDelete: Cascade, onUpdate: SetNull)
}
```

## onDelete 및 onUpdate

Dinoco는 관련 레코드가 변경되거나 제거될 때 발생하는 상황을 제어하기 위한 참조 작업을 노출합니다.

지원되는 값:

| 동작         | 의미                                      |
| :----------- | :----------------------------------------------- |
| `Cascade`    | 종속 레코드로 작업을 전파합니다. |
| `SetNull`    | 외래 키를 `null`로 설정합니다.           |
| `SetDefault` | 필드에 구성된 기본값을 설정합니다.   |

예시:

```dinoco
model Comment {
	id      Integer @id @default(autoincrement())
	postId  Integer?
	post    Post?   @relation(fields: [postId], references: [id], onDelete: Cascade, onUpdate: SetNull)
}
```

로컬 필드가 선택 사항인 경우에만 `SetNull`을 사용하십시오.

## 일대다

이것은 가장 일반적인 관계입니다: 하나의 부모 레코드가 여러 자식 레코드를 가집니다.

```dinoco
model User {
	id    Integer @id @default(autoincrement())
	name  String
	posts Post[]
}

model Post {
	id       Integer @id @default(autoincrement())
	title    String
	authorId Integer
	author   User    @relation(fields: [authorId], references: [id], onDelete: Cascade, onUpdate: Cascade)
}
```

개념적 이해:

- 하나의 `User`는 여러 `Post`를 가질 수 있습니다.
- 각 `Post`는 하나의 `User`에 속합니다.

## 다대다

다대다 관계에서는 양쪽 모두 목록을 가집니다.

```dinoco
model User {
	id    Integer @id @default(autoincrement())
	name  String

	roles Role[]
}

model Role {
	id    Integer @id @default(autoincrement())
	name  String

	users User[]
}
```

개념적 이해:

- 하나의 `User`는 여러 `Role`을 가질 수 있습니다.
- 하나의 `Role`은 여러 `User`에 속할 수 있습니다.

## 자기 참조 관계

자기 참조 관계는 모델이 자기 자신과 관계를 맺을 때 발생합니다.

```dinoco
model User {
	id        Integer @id @default(autoincrement())
	name      String
	managerId Integer?
	manager   User?   @relation(name: "UserManager", fields: [managerId], references: [id], onDelete: SetNull, onUpdate: Cascade)
	reports   User[]  @relation(name: "UserManager")
}
```

개념적 이해:

- 사용자는 관리자를 가질 수 있습니다.
- 사용자는 여러 부하 직원을 가질 수 있습니다.

## 실용적인 팁

- 동일한 모델 간에 두 개 이상의 관계가 있을 때 `name`을 사용하십시오.
- 자식 레코드가 부모 레코드 없이는 의미가 없을 때 `onDelete: Cascade`를 사용하십시오.
- 자식 레코드를 제거하지 않고 관계를 해제할 수 있을 때 `onDelete: SetNull`을 사용하십시오.
- 읽기 및 코드 생성을 용이하게 하기 위해 명시적인 이름을 가진 자기 참조 관계를 사용하십시오.

## 예시를 위한 참조 스키마

아래 예시들은 다음 스키마를 사용합니다:

```dinoco
config {
	database = "sqlite"
	database_url = env("DATABASE_URL")
}

enum Role {
	ADMIN
	USER
}

model User {
	id             String     @id @default(uuid())
	username       String     @unique
	role           Role       @default(USER)

	profile        Profile?

	followers      User[]     @relation(name: "UserFollows")
	following      User[]     @relation(name: "UserFollows")

	posts          Post[]     @relation(name: "PostAuthor")
	comments       Comment[]  @relation(name: "CommentAuthor")

	likedPosts     Post[]     @relation(name: "PostLikers")
	likedComments  Comment[]  @relation(name: "CommentLikers")
}

model Profile {
	id      String   @id @default(uuid())
	bio     String?
	userId  String   @unique
	user    User     @relation(fields: [userId], references: [id])
}

model Post {
	id        String     @id @default(uuid())
	title     String
	content   String

	authorId  String
	author    User       @relation(name: "PostAuthor", fields: [authorId], references: [id])

	likers    User[]     @relation(name: "PostLikers")

	comments  Comment[]

	tags      Tag[]
}

model Comment {
	id        String     @id @default(uuid())
	text      String

	parentId  String?
	parent    Comment?   @relation(name: "CommentReplies", fields: [parentId], references: [id])
	replies   Comment[]  @relation(name: "CommentReplies")

	postId    String
	post      Post       @relation(fields: [postId], references: [id])

	authorId  String
	author    User       @relation(name: "CommentAuthor", fields: [authorId], references: [id])

	likers    User[]     @relation(name: "CommentLikers")
}

model Tag {
	id     String  @id @default(uuid())
	name   String  @unique

	posts  Post[]
}
```

## User로부터 가능한 모든 관계를 포함하는 검색 예시

`User` 모델에서 시작하여 동일한 읽기 쿼리에서 모든 직접 관계를 로드하려면 `select::&lt;T&gt;()`를 여러 `includes(...)`와 결합할 수 있습니다.

```rust
use dinoco::{Extend, find_many};

#[derive(Debug, Clone, Extend)]
#[extend(Profile)]
struct ProfileView {
	id: String,
	bio: Option<String>,
}

#[derive(Debug, Clone, Extend)]
#[extend(User)]
struct UserRelationItem {
	id: String,
	username: String,
}

#[derive(Debug, Clone, Extend)]
#[extend(Tag)]
struct TagView {
	id: String,
	name: String,
}

#[derive(Debug, Clone, Extend)]
#[extend(Comment)]
struct CommentView {
	id: String,
	text: String,
	replies: Vec<CommentReplyView>,
	likers: Vec<UserRelationItem>,
}

#[derive(Debug, Clone, Extend)]
#[extend(Comment)]
struct CommentReplyView {
	id: String,
	text: String,
}

#[derive(Debug, Clone, Extend)]
#[extend(Post)]
struct PostView {
	id: String,
	title: String,
	content: String,
	likers: Vec<UserRelationItem>,
	tags: Vec<TagView>,
	comments: Vec<CommentView>,
}

#[derive(Debug, Clone, Extend)]
#[extend(User)]
struct UserWithAllRelations {
	id: String,
	username: String,
	profile: Option<ProfileView>,
	followers: Vec<UserRelationItem>,
	following: Vec<UserRelationItem>,
	posts: Vec<PostView>,
	comments: Vec<CommentView>,
	likedPosts: Vec<PostView>,
	likedComments: Vec<CommentView>,
}

let users = find_many::<User>()
	.select::<UserWithAllRelations>()
	.includes(|user| user.profile())
	.includes(|user| user.followers())
	.includes(|user| user.following())
	.includes(|user| {
		user.posts()
			.includes(|post| post.likers())
			.includes(|post| post.tags())
			.includes(|post| {
				post.comments()
					.includes(|comment| comment.replies())
					.includes(|comment| comment.likers())
			})
	})
	.includes(|user| {
		user.comments()
			.includes(|comment| comment.replies())
			.includes(|comment| comment.likers())
	})
	.includes(|user| {
		user.likedPosts()
			.includes(|post| post.likers())
			.includes(|post| post.tags())
			.includes(|post| {
				post.comments()
					.includes(|comment| comment.replies())
					.includes(|comment| comment.likers())
			})
	})
	.includes(|user| {
		user.likedComments()
			.includes(|comment| comment.replies())
			.includes(|comment| comment.likers())
	})
	.execute(&client)
	.await?;
```

이 패턴은 단일 관계 지향 읽기에서 사용자에 대한 풍부한 뷰를 구성하려는 경우에 유용합니다.

## User 및 Profile을 사용한 관계 삽입 예시

새 API를 사용하여 1:1 관계를 가진 레코드를 삽입하려면, `#[insertable]`로 표시된 `Extend` 페이로드 안에 관계를 배치하십시오.

```rust
use dinoco::insert_into;

#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
#[insertable]
struct UserWithProfile {
	id: String,
	username: String,
	role: Role,
	profile: Option<Profile>,
}

let created_user = insert_into::<User>()
	.values(UserWithProfile {
		id: "user-1".to_string(),
		username: "bia".to_string(),
		role: Role::USER,
		profile: Some(Profile {
			id: "profile-1".to_string(),
			bio: Some("Engenheira de software".to_string()),
			userId: String::new(),
		}),
	})
	.execute(&client)
	.await?;
```

이 흐름에서:

- `User`가 먼저 삽입됩니다.
- 관련된 `Profile`이 이어서 생성됩니다.
- `userId` 키는 Dinoco의 관계 흐름에 의해 연결됩니다.

## 중첩 관계를 사용한 insert_many 예시

여러 부모 레코드를 삽입하고 각 부모 레코드에 대해 여러 새 관련 레코드를 삽입하려는 경우 `#[insertable]`을 사용하십시오.

```rust
use dinoco::insert_many;

#[derive(Debug, Clone, dinoco::Extend)]
#[extend(Post)]
#[insertable]
struct PostWithComments {
	id: String,
	title: String,
	content: String,
	authorId: String,
	comments: Vec<Comment>,
}

let posts = vec![
	PostWithComments {
		id: "post-1".to_string(),
		title: "Primeiro post".to_string(),
		content: "Conteudo do primeiro post".to_string(),
		authorId: "user-1".to_string(),
		comments: vec![
			Comment {
				id: "comment-1".to_string(),
				text: "Muito bom".to_string(),
				parentId: None,
				postId: String::new(),
				authorId: "user-2".to_string(),
			},
			Comment {
				id: "comment-2".to_string(),
				text: "Gostei do exemplo".to_string(),
				parentId: None,
				postId: String::new(),
				authorId: "user-3".to_string(),
			},
		],
	},
	PostWithComments {
		id: "post-2".to_string(),
		title: "Segundo post".to_string(),
		content: "Conteudo do segundo post".to_string(),
		authorId: "user-1".to_string(),
		comments: vec![
			Comment {
				id: "comment-3".to_string(),
				text: "Quero mais detalhes".to_string(),
				parentId: None,
				postId: String::new(),
				authorId: "user-2".to_string(),
			},
		],
	},
];

insert_many::<Post>()
	.values(posts)
	.execute(&client)
	.await?;
```

이 흐름에서:

- 각 `Post`가 삽입됩니다.
- Dinoco는 중첩된 `Comment`를 생성하고 쓰기 중에 각 그룹을 올바른 `Post`에 연결합니다.

## 중첩 연결을 사용한 insert_many 예시

여러 부모 레코드를 삽입하고 각 부모 레코드를 이미 존재하는 여러 레코드에 연결하려는 경우 코드 생성기가 생성한 `PostConnection` enum을 사용하십시오.

```rust
use dinoco::insert_many;

#[derive(Debug, Clone, dinoco::Extend)]
#[extend(Post)]
#[insertable]
struct PostWithTags {
	id: String,
	title: String,
	content: String,
	authorId: String,
	tags: Vec<PostConnection>,
}

insert_many::<Post>()
	.values(vec![
		PostWithTags {
			id: "post-10".to_string(),
			title: "Rust e Dinoco".to_string(),
			content: "Post sobre produtividade".to_string(),
			authorId: "user-1".to_string(),
			tags: vec![
				PostConnection::Tag("tag-1".to_string()),
				PostConnection::Tag("tag-2".to_string()),
			],
		},
		PostWithTags {
			id: "post-11".to_string(),
			title: "Relações avançadas".to_string(),
			content: "Post sobre includes e relacoes".to_string(),
			authorId: "user-1".to_string(),
			tags: vec![
				PostConnection::Tag("tag-2".to_string()),
				PostConnection::Tag("tag-3".to_string()),
			],
		},
	])
	.execute(&client)
	.await?;
```

이 흐름에서:

- `Post`가 삽입됩니다.
- 이미 존재하는 `Tag`는 해당 게시물에 연결됩니다.
- 각 페이로드는 코드 생성기가 생성한 enum을 사용하여 연결을 정의합니다.

## 다음 단계

- [**열거형**](/v0.0.2/orm/enums): 스키마에서 제어되는 값을 나타내는 방법을 확인하십시오.
- [**모델**](/v0.0.2/orm/models): Dinoco API를 사용한 필드 구조 및 검색, 삽입, 업데이트, 삭제 예시를 확인하십시오.
